AM_CPPFLAGS = -g @BOOST_CFLAGS@ 

lib_LTLIBRARIES=libfission.la
libfission_la_LIBADD = @BOOST_LIBS@ 
libfission_la_LDFLAGS = -Wl,-rpath,./ 
libfission_la_SOURCES = \
Context.h \
Engine.cpp \
Engine.h \
GLDisplay.h \
GLDisplay.cpp \
ImageBuffer.h \
ImageReader.cpp \
ImageReader.h \
ImageWriter.cpp \
ImageWriter.h \
JpegReader.h \
JpegReader.cpp \
Name.h \
Node.cpp \
Node.h \
Parameter.cpp \
Parameter.h \
Process.h \
Status.h
 
